# SoftwareRenderer

./: CMakeLists.txt  README.md
src/core/: App.cpp  App.h  main.cpp
src/geometry/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Primitive.cpp  Primitive.h  Vertex.h
src/rasterizer/: FragmentShader.hpp  Rasterizer.cpp  Rasterizer.h  Texture.cpp  Texture.h  VertexShader.hpp
src/utils/: Utils.hpp
